# connect-bi-reporter

./: .eslintrc.cjs  .flake8  .gitignore  CHANGELOG.md  Dockerfile  HOWTO.md  README.md  connect-deployment.yml  docker-compose.yml  jsconfig.json  overview.md  package-lock.json  package.json  pyproject.toml  vite.config.js  vitest.config.js  webpack.config.js
.github/workflows/: test.yml
connect_bi_reporter/: __init__.py  constants.py  db.py  errors.py  events.py  extension.json  scheduler.py  schemas.py  utils.py  webapp.py
connect_bi_reporter/connect_services/: devops.py  reports.py
connect_bi_reporter/credentials/: errors.py  models.py  services.py
connect_bi_reporter/feeds/: enums.py  errors.py  models.py  services.py  validator.py
connect_bi_reporter/static/: index.2aad1155a552c732f455.js  index.html  main.html  settings.dcaa6270b782b7fb321b.js  settings.html  vendors.c20984238236206bbdc8.js
connect_bi_reporter/uploads/: enums.py  errors.py  models.py  services.py  storage_utils.py  tasks.py
tests/: conftest.py  database.py  factories.py  test_events.py  test_scheduler.py  test_schemas.py  test_utils.py  test_webapp.py
tests/credential/: test_models.py
tests/credentials/: test_models.py
tests/feeds/: test_models.py  test_services.py
tests/uploads/: test_models.py  test_tasks.py
ui/assets/: base.css  variables.css
ui/components/: ActionsMenu.vue  AddEditCredentialDialog.vue  Alert.vue  AlertItem.vue  CreateFeedDialog.vue  CredentialsCard.vue  DateItem.spec.js  DateItem.vue  DeleteCredentialDialog.vue  DeleteFeedDialog.vue  DestinationTab.vue  DetailItem.vue  DetailItemGroup.spec.js  DetailItemGroup.vue  Detailitem.spec.js  (+27 more)
(+177 files in other folders)
